--- a/Shoppingmall mini game/index.html
+++ b/Shoppingmall mini game/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Shopping</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="src/main.js" defer></script>
+    <script src="src/cwmain.js" defer></script>
   </head>
   <body>
     <!-- Logo -->
@@ -25,11 +25,6 @@
     <button class="btn colorBtn yellow">Yellow</button>
     <button class="btn colorBtn pink">Pink</button>
     <!-- Items -->
-    <ul class="items">
-      <li class="item">
-        <img src="img/pink_t.png" alt="tshirt" class="item__thumbnail" />
-        <span class="item__description">female, large</span>
-      </li>
-    </ul>
+    <ul class="items"></ul>
   </body>
 </html>
